# tts-tauri

./: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.vue  components.d.ts  main.js
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/result/08d7144138b642bfa125a69224a4bfad/: output_08d7144138b642bfa125a69224a4bfad.json  output_08d7144138b642bfa125a69224a4bfad.srt
src-tauri/result/4f4fecb7a3d64ebab46c0fee95873d2e/: output_4f4fecb7a3d64ebab46c0fee95873d2e.json  output_4f4fecb7a3d64ebab46c0fee95873d2e.srt  output_4f4fecb7a3d64ebab46c0fee95873d2e.txt
src-tauri/src/: lib.rs  main.rs
src-tauri/src/utils/: api.rs  custom_result.rs  mod.rs  sub_marker.rs  tts.rs
src-tauri/test/: output.srt  sub_title_test.rs  复杂文本2.srt  复杂文本2.txt  复杂文本3.json  复杂文本3.txt  英文文本.json  英文文本.srt  英文文本.txt
src/assets/: base.css
src/pages/: SetPage.vue  TTS.vue
src/router/: index.js
src/store/: option.js  voices.js
src/utils/: function.js  mitt.js  sqlite.js
